alignment fixes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,16 +46,16 @@
   flex:3;
   display: flex;
   flex-direction: column;
+  padding: 20px 15px;
 }
 
 .piechart-dates{
   width: 100%;
-  height: 100px;
+  height: 50px;
   display: flex;
-  justify-content: space-around;
   .date-divider{
     height: 6px;
-    width: 30px;
+    width:30px;
     background: rgba(255,255,255,0.2);
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     border-radius: 3px;
@@ -63,10 +63,10 @@
   }
 
   .date-from, .date-to{
-    width: 180px;
+    width: 150px;
     height: 50px;
-    margin: auto;
-    border-radius: 25px;
+    margin: auto 5px;
+    font-size: 16px;
   }
 }
 
@@ -75,22 +75,20 @@
 }
 
 .piechart-radio-buttons{
-  height: 85px;
+  height: 50px;
   display: flex;
-  // justify-content: space-around;
   align-items: center;
 
   .radio + label{
     flex: 1;
-    margin: 20px;
+    margin: 0 5px;
   }
 }
 
 .transactions-frame{
-  flex:5;
+  flex:6;
   display: flex;
   flex-direction: column;
-  // background-color: green;
 }
 
 .transactions-list{
@@ -121,7 +119,7 @@
 }
 
 .add-transaction-form{
-  flex: 3;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
@@ -131,7 +129,7 @@
   flex:1;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 5px 18px;
 
   input[type = "text"]{
     flex:1;
